syntax = "proto3";

option java_package = "user";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUserByEmail(UserByEmailRequest) returns (UserResponse);
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string firstName = 4;
  string lastName = 5;
}

message UserByEmailRequest {
  string email = 1;
}

message UserResponse {
  int64 id = 1;
  string email = 2;
  string password = 3;
  repeated string roles = 4;
}